--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "start": "node server.js"
   },
   "author": "Robert Memmer",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1"
+  }
 }
